test/errors/function/ref_too_many_args.np
def fn():
    pass


f = fn
f(1)
